set up scss, migrated existing styles to scss files, began new styles

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -13,6 +13,7 @@
 	   crossorigin=""/>
 
 	<link rel="stylesheet" href="styles/css/scroll-story.css" type="text/css"/>
+	<link rel="stylesheet" href="https://use.typekit.net/lfr0kyk.css">
 
 	<!-- Make sure you put this AFTER Leaflet's CSS -->
 	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
