applying styles - mostly typographic

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -23,12 +23,24 @@
 </head>
 
 <body>
+	<nav class="main-menu">
+		<ul>
+			<li><a href="#">urban renewal home</a></li>
+			<li class="selected"><a href="#">overview</a></li>
+			<li><a href="#">the visual record</a></li>
+			<li><a href="#">personal stories</a></li>
+			<li class="last-menu-item"><a href="#">maps</a></li>
+		</ul>
+	</nav>
+
 	<section>
-		<h3>Albany: Lost Places/Displaced People</h3>		
-		<h1>The Reaction to Redevelopment</h1>
+		<header class="story-title">
+			<h3 class="grid-title">Albany: Lost Places/Displaced People</h3>		
+			<h1>The Reaction to Redevelopment</h1>
+		</header>
 
 		<div class="full-image">
-			<img src="images/albany-aerial.jpg"/>
+			<img src="images/albany-aerial.jpg" class="top-image"/>
 			<p>An aerial photo of Albany&apos;s downtown before redevelopment. Photo courtesy of New York State Archives.</p>
 		</div>
 
