added map content, removed empty paragraphs and last-one styles, began styles for quotes

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -99,30 +99,36 @@
 		<div id="caption-sequence1" class="caption-panel">
 
 			<div>
-				<p>Jimmy Strawn in his Market District apartment, where he had lived since the 1940s. Credit: NYS Archives. Quote: &ldquo;&hellip;.tearing down &lsquo;these 50 and 60-year-old buildings might make for some decent places in which to live.&rsquo;&rdquo;</p>
+				<p class="gallery-caption">Jimmy Strawn in his Market District apartment, where he had lived since the 1940s. Credit: NYS Archives.</p>
+				<p class="gallery-quote">&ldquo;&hellip;.tearing down &lsquo;these 50 and 60-year-old buildings might make for some decent places in which to live.&rsquo;&rdquo;</p>
 			</div>
 
 			<div>
-				<p>Lillian Pierce owned the Pierce Hotel along with several other Rooming House District residential properties. Credit: Times Union.  Quote: &ldquo;How is it going to help downtown? Naturally, we don&rsquo;t want to move. Even the news may scare my people away. And they&rsquo;ve been coming here for years.&rdquo;</p>
+				<p class="gallery-caption">Lillian Pierce owned the Pierce Hotel along with several other Rooming House District residential properties. Credit: Times Union.</p>
+				<p class="gallery-quote">&ldquo;How is it going to help downtown? Naturally, we don&rsquo;t want to move. Even the news may scare my people away. And they&rsquo;ve been coming here for years.&rdquo;</p>
 			</div>
 
 			<div>
-				<p>Caption: Domenico Ingemie owned this house near the Cathedral with his wife Venera. Credit: AIHA. Quote: &ldquo;We have lived in this house for 35 years. It is all we have. We are not of the age where we can be put out of our home and start all over again. How are we going to get accustomed to or make new friends if we have to move out of an area that all our friends are in.&rdquo;</p>
+				<p class="gallery-caption">Caption: Domenico Ingemie owned this house near the Cathedral with his wife Venera. Credit: AIHA.</p>
+				<p class="gallery-quote">&ldquo;We have lived in this house for 35 years. It is all we have. We are not of the age where we can be put out of our home and start all over again. How are we going to get accustomed to or make new friends if we have to move out of an area that all our friends are in.&rdquo;</p>
 			</div>
 
 			<div>
-				<p>Caption: Rev. George Gallas was pastor of St. Sophia Greek Orthodox Church, which was in the process of expanding. Credit: St Sophia Greek Orthodox Church. Quote: &ldquo;Up until last night, the plans were going through. We had bought up 10 pieces of property. We knocked down buildings. Then today we read the papers. It was a blockbuster.&rdquo;</p>
+				<p class="gallery-caption">Caption: Rev. George Gallas was pastor of St. Sophia Greek Orthodox Church, which was in the process of expanding. Credit: St Sophia Greek Orthodox Church.</p>
+				<p class="gallery-quote">&ldquo;Up until last night, the plans were going through. We had bought up 10 pieces of property. We knocked down buildings. Then today we read the papers. It was a blockbuster.&rdquo;</p>
 			</div>
 
 			<div>
-				<p>Caption: Down the block from Alice Stoutenburgh&rsquo;s Lancaster Street home in the Rooming House District. Credit: NYS Archives. Quote: &ldquo;We bought this place for taxes 20 years ago. This was a respectable neighborhood then. Now a woman doesn&rsquo;t dare go out on the street alone. It&rsquo;s a disgrace to the capital city&hellip;. My house is kept in good repair but I&rsquo;m fighting a losing battle on this street. Even before this happened, I&rsquo;d been looking for a two-family home in some other part of the city.&rdquo;</p>
+				<p class="gallery-caption">Down the block from Alice Stoutenburgh&rsquo;s Lancaster Street home in the Rooming House District. Credit: NYS Archives.</p>
+				<p class="gallery-quote">&ldquo;We bought this place for taxes 20 years ago. This was a respectable neighborhood then. Now a woman doesn&rsquo;t dare go out on the street alone. It&rsquo;s a disgrace to the capital city&hellip;. My house is kept in good repair but I&rsquo;m fighting a losing battle on this street. Even before this happened, I&rsquo;d been looking for a two-family home in some other part of the city.&rdquo;</p>
 			</div>
 
-			<div class="last-one">
-				<p>Pharmacist Ken Hunter had been in business near the Cathedral since the Great Depression. Credit: NYS Archives. Quote: &ldquo;I&rsquo;ve been here 33 years this November. I&rsquo;ve established a very good business and I would like to finish my life of work here. It would be too great a hardship to try and start over again. Why don&rsquo;t they just take the property that had deteriorated and leave the good paying businesses and properties alone?&rdquo;</p>
+			<div>
+				<p>Pharmacist Ken Hunter had been in business near the Cathedral since the Great Depression. Credit: NYS Archives.</p>
+				<p class="gallery-quote">&ldquo;I&rsquo;ve been here 33 years this November. I&rsquo;ve established a very good business and I would like to finish my life of work here. It would be too great a hardship to try and start over again. Why don&rsquo;t they just take the property that had deteriorated and leave the good paying businesses and properties alone?&rdquo;</p>
 			</div>
 
-		</div><!-- /caption-panel -->		
+		</div><!-- /caption-panel -->
 
 
 		<div class="narrative">	
@@ -133,9 +139,6 @@
 				<iframe width="90%" height="460" src="https://www.youtube.com/embed/KQkNWFaRpW0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<p>Credit: Sinclair Broadcast Group via M.E. Grenander Department of Special Collections and Archives.</p>
 			</div>
-
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
 
 		</div><!-- /narrative -->	
 
@@ -198,9 +201,6 @@
 
 				<p>This footage documents the condition of South Mall properties from the summer of 1962, just before demolition began. Credit: Sinclair Broadcast Group via M.E. Grenander Department of Special Collections and Archives.</p>
 			</div>
-			
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
 
 		</div><!-- /narrative -->	
 
@@ -238,14 +238,23 @@
 				<div id="thing4">
 					<p>Rooming House District. This neighborhood was home to a large population of elderly single men and women. Conveniently near the Capitol, it also housed unmarried state workers and out-of-town legislators. Rooming houses were both business and home to the divorced or widowed women who owned most of them. Hudson Avenue shops and eateries catered to the residents of this district.</p>
 				</div>
-				<div id="thing5" class="last-one">
+				<div id="thing5">
 					<p>Hudson Avenue Shopping District. The small businesses in this shopping district were geared toward the needs of rooming house residents—a combination of groceries, restaurants and bars, laundries, tailors, barbershops, and shoe repair stores. Business owners, employees, and other tenants lived in apartments above the storefronts.</p>
+				</div>
+				<div id="thing6">
+					<p>Cathedral Area Neighborhood. For many in this largely residential district, life centered around the Catholic Church and its schools. The population was predominantly white, but as a result of the Great Migration, a growing number of Southern blacks had moved in over the past decades. A smattering of small, mom-and-pop businesses served local residents. This was the neighborhood canvassed by Democratic Party operatives soon after the State announced the South Mall plan.</p>
+				</div>
+				<div id="thing7">
+					<p>Market District. The massive Lyon Block, a former print factory, dominated this area, which encompassed the city farmers market and specialized in produce sales and distribution. Residents lived in rental units above stores and on the edges of this district. This is where the local Boys Club and Methodist Inner City Mission got their start.</p>
+				</div>
+				<div id="thing8">
+					<p>South Pearl Street Shopping District. Best known for bargain clothing, shoes, and furniture, this section drew shoppers from across the region. It also included upscale outlets like B. J. Koblenz Jewelry and M. Solomon Furs and Fashion.</p>
+				</div>
+				<div id="thing9">
+					<p>The Gut. Factories stood side-by-side with single-room-occupancy hotels, missions, and taverns in this section of the city. At the turn of the twentieth-century, it had been home to newly-arrived European immigrants. Decades later, Southern migrants settled here before moving up the hill to more prosperous neighborhoods.</p>
 				</div>
 
 			</div><!-- /caption-panel -->
-			
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
 
 	</section> <!-- /chapter3 -->
 
@@ -273,7 +282,7 @@
 
 			<p>The following evening, Francisca Abarca, her two children, and tenants became the first of almost 7,000 people displaced for the South Mall. Their house was nextdoor to the demolished structure and relied on it for support, as was true of most of the area&rsquo;s many rowhouses. The destruction of one building endangered adjacent structures&mdash;an apt metaphor for the damage caused by displacement. Forcing area residents out of their homes and neighborhoods created social and emotional as well as economic hardship. [Link to Mindy Fullilove essay.]</p>
 
-		</div>
+		</div><!-- /narrative -->
 
 		<div id="image-sequence4" class="image-panel"> 
 			<div>
@@ -354,14 +363,11 @@
 				<p>The Palace Hotel was also the Rossi-Palombi family home. Credit: NYS Archives. Sixteen-year-old Assunta Rossi emigrated from Italy with her family and married Frank Palombi soon after her 1913 arrival. The Rossi-Palombi clan settled on Madison Avenue in The Gut, where they built up a business serving a transient population of men looking for a hot meal, some drink, and a room or just a bed for the night. The family&rsquo;s Palace Hotel also housed an employment agency specializing in railroad crews. Assunta and Frank later opened the Palombi Hotel along the same lines. By the time of the South Mall, the family had moved out, the Palace was abandoned, and the Palombi Hotel was for sale or lease.</p>
 			</div>
 
-			<div class="last-one">
+			<div>
 				<p>The Radrizzi family emigrated from Italy, the Strongs from Russia. Both settled on the same block of Jay Street and opened rooming houses, where they lived and worked for almost four decades, until displaced by the South Mall. Shared history and hardship served to strengthen the bond between these two families who still remain in close contact more than fifty years after their homes were demolished.</p>
 			</div>
 
 		</div><!-- /caption-panel -->
-
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
 
 	</section> <!-- /chapter4 -->
 
@@ -435,7 +441,7 @@
 			<div>
 				<p>This office tower, the tallest in the city, would become known as the Mayor Erastus Corning 2nd Tower. Credit: NYS Archives.</p>
 			</div>
-			<div class="last-one">
+			<div>
 				<p>With fountains, public art, and pocket parks, the South Mall was intended as a gathering space, even after work and on weekends. Credit: NYS Archives.</p>
 			</div>
 
@@ -451,9 +457,6 @@
 			</div>
 
 			<p>Despite criticism, the South Mall project moved inexorably forward.  By the end of 1963, the State had displaced the majority of area residents, and demolition was more than halfway complete.</p>
-
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
 
 		</div><!-- /narrative -->
 
@@ -516,12 +519,9 @@
 
 			<p>&ldquo;It&rsquo;s very hard for us to pull up roots. We had a lovely life here,&rdquo; Emma Leonard told Dick Weber on December 22, 1964, the day she and her family became the last to move out of the South Mall redevelopment area. By that time, the Leonard family home overlooking Lincoln Park was surrounded by the rubble-strewn remnants of the Italian-Irish Catholic community into which Emma had been born, grown up, married, and become a mother. She described witnessing its destruction over the past two-and-a-half years as a &ldquo;nightmare.&rdquo;</p>
 
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-
 		</div><!-- /narrative -->	
 
-	</section> <!-- /chapter6 -->
+	</section><!-- /chapter6 -->
 
 
 
@@ -543,9 +543,6 @@
 			<p>Times Union columnist John Maguire captured this sentiment: &ldquo;The way things have been going lately around Albany, it begins to look as if the South Mall may never be finished or at best may be delayed a long time. I think we ought to start thinking about what to do with all that open space. Someone here in the office said it looks like good soil for planting celery, but 98 acres set to celery seems a bit much. Someone else said it&rsquo;s terraced so it would make good rice paddies, and another man said why not let Ag-and-Markets use it for an experiment farm where they could grow okra and raise alpaca&hellip;. Another original thinker said it would make a good arena for teenage rumbles, because there&rsquo;s a lot of bricks handy &hellip; and no windows to break. There were two votes for a new municipal golf course, two for a ski slope and one for flooding it and having ice skating.&rdquo;</p>
 
 			<p>For the next several months, Albany residents lived with this uncertainty. Would the State rebuild? Or would the South Mall remain a massive hole in the heart of the city?</p>
-
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
 
 		</div><!-- /narrative -->	
 
