add Sanborn map, state, boarding districts

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -232,6 +232,9 @@
 
 			<div id="caption-sequence3" class="caption-panel"><!-- Don - there are more map captions to be included in this section -->
 
+				<div id="thing2" class="narrower">
+					<p class="gallery-text">Intro to Sanborn map. Such and such an agency created a map of the proposed redevelopment are in 196x.</p>
+				</div>
 				<div id="thing3" class="narrower">
 					<p class="gallery-text">State Street Office District. Adjacent to the New York State Capitol and Alfred E. Smith State Office Building, this was a prime location for lawyers&rsquo; and lobbyists&rsquo; offices, as well as for taverns where lawyers and lobbyists could rub shoulders with legislators. Elegant homes and apartment buildings lined State and Chestnut streets.</p>
 				</div>
