--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -109,12 +109,12 @@
 			</div>
 
 			<div>
-				<p class="gallery-caption">Caption: Domenico Ingemie owned this house near the Cathedral with his wife Venera. Credit: AIHA.</p>
+				<p class="gallery-caption">Domenico Ingemie owned this house near the Cathedral with his wife Venera. Credit: AIHA.</p>
 				<p class="gallery-quote">&ldquo;We have lived in this house for 35 years. It is all we have. We are not of the age where we can be put out of our home and start all over again. How are we going to get accustomed to or make new friends if we have to move out of an area that all our friends are in.&rdquo;</p>
 			</div>
 
 			<div>
-				<p class="gallery-caption">Caption: Rev. George Gallas was pastor of St. Sophia Greek Orthodox Church, which was in the process of expanding. Credit: St Sophia Greek Orthodox Church.</p>
+				<p class="gallery-caption">Rev. George Gallas was pastor of St. Sophia Greek Orthodox Church, which was in the process of expanding. Credit: St Sophia Greek Orthodox Church.</p>
 				<p class="gallery-quote">&ldquo;Up until last night, the plans were going through. We had bought up 10 pieces of property. We knocked down buildings. Then today we read the papers. It was a blockbuster.&rdquo;</p>
 			</div>
 
