map finishing un zoom

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -256,6 +256,9 @@
 				<div id="thing9" class="narrower">
 					<p class="gallery-text">The Gut. Factories stood side-by-side with single-room-occupancy hotels, missions, and taverns in this section of the city. At the turn of the twentieth-century, it had been home to newly-arrived European immigrants. Decades later, Southern migrants settled here before moving up the hill to more prosperous neighborhoods.</p>
 				</div>
+				<div id="thing10" class="narrower">
+					<p class="gallery-text">[maybe some wrap-up? Mention of access to the full interactive map? Maybe a link?]</p>
+				</div>
 
 			</div><!-- /caption-panel -->
 
