tweek space at map ending

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -230,37 +230,44 @@
 			
 		</div>
 
-			<div id="caption-sequence3" class="caption-panel"><!-- Don - there are more map captions to be included in this section -->
+		<div id="caption-sequence3" class="caption-panel"><!-- Don - there are more map captions to be included in this section -->
 
-				<div id="thing2" class="narrower">
-					<p class="gallery-text">Intro to Sanborn map. Such and such an agency created a map of the proposed redevelopment are in 196x.</p>
-				</div>
-				<div id="thing3" class="narrower">
-					<p class="gallery-text">State Street Office District. Adjacent to the New York State Capitol and Alfred E. Smith State Office Building, this was a prime location for lawyers&rsquo; and lobbyists&rsquo; offices, as well as for taverns where lawyers and lobbyists could rub shoulders with legislators. Elegant homes and apartment buildings lined State and Chestnut streets.</p>
-				</div>
-				<div id="thing4" class="narrower">
-					<p class="gallery-text">Rooming House District. This neighborhood was home to a large population of elderly single men and women. Conveniently near the Capitol, it also housed unmarried state workers and out-of-town legislators. Rooming houses were both business and home to the divorced or widowed women who owned most of them. Hudson Avenue shops and eateries catered to the residents of this district.</p>
-				</div>
-				<div id="thing5" class="narrower">
-					<p class="gallery-text">Hudson Avenue Shopping District. The small businesses in this shopping district were geared toward the needs of rooming house residents—a combination of groceries, restaurants and bars, laundries, tailors, barbershops, and shoe repair stores. Business owners, employees, and other tenants lived in apartments above the storefronts.</p>
-				</div>
-				<div id="thing6" class="narrower">
-					<p class="gallery-text">Cathedral Area Neighborhood. For many in this largely residential district, life centered around the Catholic Church and its schools. The population was predominantly white, but as a result of the Great Migration, a growing number of Southern blacks had moved in over the past decades. A smattering of small, mom-and-pop businesses served local residents. This was the neighborhood canvassed by Democratic Party operatives soon after the State announced the South Mall plan.</p>
-				</div>
-				<div id="thing7" class="narrower">
-					<p class="gallery-text">Market District. The massive Lyon Block, a former print factory, dominated this area, which encompassed the city farmers market and specialized in produce sales and distribution. Residents lived in rental units above stores and on the edges of this district. This is where the local Boys Club and Methodist Inner City Mission got their start.</p>
-				</div>
-				<div id="thing8" class="narrower">
-					<p class="gallery-text">South Pearl Street Shopping District. Best known for bargain clothing, shoes, and furniture, this section drew shoppers from across the region. It also included upscale outlets like B. J. Koblenz Jewelry and M. Solomon Furs and Fashion.</p>
-				</div>
-				<div id="thing9" class="narrower">
-					<p class="gallery-text">The Gut. Factories stood side-by-side with single-room-occupancy hotels, missions, and taverns in this section of the city. At the turn of the twentieth-century, it had been home to newly-arrived European immigrants. Decades later, Southern migrants settled here before moving up the hill to more prosperous neighborhoods.</p>
-				</div>
-				<div id="thing10" class="narrower">
-					<p class="gallery-text">[maybe some wrap-up? Mention of access to the full interactive map? Maybe a link?]</p>
-				</div>
+			<div id="thing2" class="narrower">
+				<p class="gallery-text">Intro to Sanborn map. Such and such an agency created a map of the proposed redevelopment are in 196x.</p>
+			</div>
+			<div id="thing3" class="narrower">
+				<p class="gallery-text">State Street Office District. Adjacent to the New York State Capitol and Alfred E. Smith State Office Building, this was a prime location for lawyers&rsquo; and lobbyists&rsquo; offices, as well as for taverns where lawyers and lobbyists could rub shoulders with legislators. Elegant homes and apartment buildings lined State and Chestnut streets.</p>
+			</div>
+			<div id="thing4" class="narrower">
+				<p class="gallery-text">Rooming House District. This neighborhood was home to a large population of elderly single men and women. Conveniently near the Capitol, it also housed unmarried state workers and out-of-town legislators. Rooming houses were both business and home to the divorced or widowed women who owned most of them. Hudson Avenue shops and eateries catered to the residents of this district.</p>
+			</div>
+			<div id="thing5" class="narrower">
+				<p class="gallery-text">Hudson Avenue Shopping District. The small businesses in this shopping district were geared toward the needs of rooming house residents—a combination of groceries, restaurants and bars, laundries, tailors, barbershops, and shoe repair stores. Business owners, employees, and other tenants lived in apartments above the storefronts.</p>
+			</div>
+			<div id="thing6" class="narrower">
+				<p class="gallery-text">Cathedral Area Neighborhood. For many in this largely residential district, life centered around the Catholic Church and its schools. The population was predominantly white, but as a result of the Great Migration, a growing number of Southern blacks had moved in over the past decades. A smattering of small, mom-and-pop businesses served local residents. This was the neighborhood canvassed by Democratic Party operatives soon after the State announced the South Mall plan.</p>
+			</div>
+			<div id="thing7" class="narrower">
+				<p class="gallery-text">Market District. The massive Lyon Block, a former print factory, dominated this area, which encompassed the city farmers market and specialized in produce sales and distribution. Residents lived in rental units above stores and on the edges of this district. This is where the local Boys Club and Methodist Inner City Mission got their start.</p>
+			</div>
+			<div id="thing8" class="narrower">
+				<p class="gallery-text">South Pearl Street Shopping District. Best known for bargain clothing, shoes, and furniture, this section drew shoppers from across the region. It also included upscale outlets like B. J. Koblenz Jewelry and M. Solomon Furs and Fashion.</p>
+			</div>
+			<div id="thing9" class="narrower">
+				<p class="gallery-text">The Gut. Factories stood side-by-side with single-room-occupancy hotels, missions, and taverns in this section of the city. At the turn of the twentieth-century, it had been home to newly-arrived European immigrants. Decades later, Southern migrants settled here before moving up the hill to more prosperous neighborhoods.</p>
+			</div>
+			<div id="thing10" class="narrower">
+				<p class="gallery-text">[maybe some wrap-up? Mention of access to the full interactive map? Maybe a link?]</p>
+			</div>
 
-			</div><!-- /caption-panel -->
+			<p>&nbsp;</p>
+
+		</div><!-- /caption-panel -->
+
+		<div class="narrative">	
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+		</div><!-- /narrative -->	
 
 	</section> <!-- /chapter3 -->
 
