small fixes and updating editorial content

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -105,6 +105,7 @@
 			<div>
 				<p class="gallery-caption">Jimmy Strawn in his Market District apartment, where he had lived since the 1940s. From the NYS Archives.</p>
 				<p class="gallery-quote">&ldquo;&hellip;.tearing down &lsquo;these 50 and 60-year-old buildings might make for some decent places in which to live.&rsquo;&rdquo;</p>
+				<p>&nbsp;</p>
 			</div>
 
 			<div>
