began jpg mockup integration

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 		<h2>Mockups</h2>
 		<ul>
 			<li>
-				<a href="#">Thing 1</a>
+				<a href="mockups/home.html">Home Page</a>
 			</li>
 			<li>
-				<a href="#">Thing 2</a>
+				<a href="mockups/overview.html">Overview Grid</a>
 			</li>
 		</ul>
 
