--- a/index.html
+++ b/index.html
@@ -25,6 +25,39 @@
 			<li>
 				<a href="mockups/overview.html">Overview Grid</a>
 			</li>
+			<li>
+				<a href="mockups/visual1.html">The Visual Record - Default View</a>
+			</li>			
+			<li>
+				<a href="mockups/visual2.html">The Visual Record - Filters</a>
+			</li>			
+			<li>
+				<a href="mockups/visual3.html">The Visual Record - Search Selections</a>
+			</li>			
+			<li>
+				<a href="mockups/visual4.html">The Visual Record - Search Results</a>
+			</li>			
+			<li>
+				<a href="mockups/visual5.html">The Visual Record - Item Detail</a>
+			</li>			
+			<li>
+				<a href="mockups/personal1.html">Personal Stories - Menu</a>
+			</li>			
+			<li>
+				<a href="mockups/personal2.html">Personal Stories - Story Page</a>
+			</li>			
+			<li>
+				<a href="mockups/personal3.html">Personal Stories - City Menu</a>
+			</li>
+			<li>
+				<a href="mockups/personal4.html">Personal Stories - City Menu ToolTip</a>
+			</li>			
+			<li>
+				<a href="mockups/personal5.html">Personal Stories - Brief Story</a>
+			</li>			
+			<li>
+				<a href="mockups/personal6.html">Personal Stories - Story Page</a>
+			</li>		
 		</ul>
 
 		<h2>Then &amp; Now Prototypes</h2>
