--- a/mockups/personal2.html
+++ b/mockups/personal2.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>City/Theme Overview Grid</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="home.html">previous mockup</a> | <a href="visuals1.html">next mockup</a></p>
+		<h1>Personal Stories - Story Page</h1>
+		<p><a href="../index.html">return to menu</a> | <a href="personal1.html">previous mockup</a> | <a href="personal3.html">next mockup</a></p>
 
-		<img src="images/02-overview2.jpg">
+		<img src="images/15-stories-narrative1.jpg">
 
 	</div>
 </body>
