trial link from mockup
lose scrolling indicators

--- a/mockups/personal2.html
+++ b/mockups/personal2.html
@@ -12,7 +12,12 @@
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
 		<h1>Personal Stories - Story Page</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="personal1.html">previous mockup</a> | <a href="personal3.html">next mockup</a></p>
+		<p>
+			<a href="../index.html">return to menu</a> | 
+			<a href="personal1.html">previous mockup</a> | 
+			<a href="personal3.html">next mockup</a> |
+			<a href="../stories/albany-displaced.html#lillian">Lilian's story in prototype</a>
+		</p>
 
 		<img src="images/15-stories-narrative1.jpg">
 
