--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -109,7 +109,7 @@
 				<p>&nbsp;</p>
 			</div>
 
-			<div>
+			<div id="lillian">
 				<p class="gallery-caption">Lillian Pierce owned the Pierce Hotel along with several other Rooming House District residential properties. Courtesy of the <i>Times Union.</i></p>
 				<p class="gallery-quote">&ldquo;How is it going to help downtown? Naturally, we don&rsquo;t want to move. Even the news may scare my people away. And they&rsquo;ve been coming here for years.&rdquo;</p>
 			</div>
