redid mockup pages and menu page

--- a/mockups/personal4.html
+++ b/mockups/personal4.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>Personal Stories - City Menu ToolTip</h1>
+		<h1>Personal Stories - Albany Menu</h1>
 		<p><a href="../index.html">return to menu</a> | <a href="personal3.html">previous mockup</a> | <a href="personal5.html">next mockup</a></p>
 
-		<img src="images/17-stories-city-menu-hover.jpg">
+		<img src="images/10-personal-stories-albany-menu.jpg">
 
 	</div>
 </body>
