--- a/mockups/personal5.html
+++ b/mockups/personal5.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>Personal Stories - Brief Story</h1>
+		<h1>Personal Stories - City Menu ToolTip</h1>
 		<p><a href="../index.html">return to menu</a> | <a href="personal4.html">previous mockup</a> | <a href="personal6.html">next mockup</a></p>
 
-		<img src="images/18-stories-city-menu-short-narr.jpg">
+		<img src="images/11-personal-stories-albany-popup.jpg">
 
 	</div>
 </body>
