--- a/mockups/personal6.html
+++ b/mockups/personal6.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>Personal Stories - Story Page</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="personal5.html">previous mockup</a></p>
+		<h1>Personal Stories - Brief Story</h1>
+		<p><a href="../index.html">return to menu</a> | <a href="personal5.html">previous mockup</a> | <a href="personal7.html">next mockup</a></p>
 
-		<img src="images/19-stories-narrative2.jpg">
+		<img src="images/12-personal-stories-short-story.jpg">
 
 	</div>
 </body>
