--- a/mockups/sights-sounds.html
+++ b/mockups/sights-sounds.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>The Visual Record - Filters</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="visuals1.html">previous mockup</a> | <a href="visuals3.html">next mockup</a></p>
+		<h1>Sights &amp; Sounds - Sample Video</h1>
+		<p><a href="../index.html">return to menu</a> | <a href="citystory4.html">previous mockup</a> | <a href="personal1.html">next mockup</a></p>
 
-		<img src="images/16-visuals-filters.jpg">
+		<img src="">
 
 	</div>
 </body>
