--- a/mockups/visuals3.html
+++ b/mockups/visuals3.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>Visual Record - Selected Filters</h1>
+		<h1>The Visual Record - Filter Selections</h1>
 		<p><a href="../index.html">return to menu</a> | <a href="visuals2.html">previous mockup</a> | <a href="visuals4.html">next mockup</a></p>
 
-		<img src="images/11-visuals-selections.jpg">
+		<img src="images/17-visuals-filter-selections.jpg">
 
 	</div>
 </body>
