--- a/index.html
+++ b/index.html
@@ -18,47 +18,77 @@
 		</ul>
 
 		<h2>Mockups</h2>
-		<ul>
-			<li>
+		<ol>
+<li>
 				<a href="mockups/home.html">Home Page</a>
 			</li>
 			<li>
-				<a href="mockups/overview.html">Overview Grid</a>
+				<a href="mockups/citystory1.html">4 Cities / 4 Stories Menu - Default View</a>
 			</li>
 			<li>
-				<a href="mockups/visual1.html">The Visual Record - Default View</a>
-			</li>			
+				<a href="mockups/citystory2.html">4 Cities / 4 Stories - City Story Tooltip</a> (<em>Reaction to Redevelopment</em>)
+			</li>
 			<li>
-				<a href="mockups/visual2.html">The Visual Record - Filters</a>
-			</li>			
+				<a href="mockups/citystory3.html">4 Cities / 4 Stories - City Intro</a>
+			</li>
 			<li>
-				<a href="mockups/visual3.html">The Visual Record - Search Selections</a>
-			</li>			
+				<a href="mockups/citystory4.html">4 Cities / 4 Stories - Theme Intro</a>
+			</li>
 			<li>
-				<a href="mockups/visual4.html">The Visual Record - Search Results</a>
-			</li>			
+				<a href="mockups/sights-sounds.html">[Sights & Sounds - Sample Video]</a>
+			</li>
 			<li>
-				<a href="mockups/visual5.html">The Visual Record - Item Detail</a>
-			</li>			
+				<a href="mockups/personal1.html">Personal Stories - Topic Menu</a>
+			</li>
 			<li>
-				<a href="mockups/personal1.html">Personal Stories - Menu</a>
-			</li>			
-			<li>
-				<a href="mockups/personal2.html">Personal Stories - Story Page</a>
-			</li>			
+				<a href="mockups/personal2.html">Personal Stories - Story Page</a> (<em>Hunter&apos;s Pharmacy</em>)
+			</li>
 			<li>
 				<a href="mockups/personal3.html">Personal Stories - City Menu</a>
 			</li>
 			<li>
-				<a href="mockups/personal4.html">Personal Stories - City Menu ToolTip</a>
-			</li>			
+				<a href="mockups/personal4.html">Personal Stories - Albany Menu</a>
+			</li>
 			<li>
-				<a href="mockups/personal5.html">Personal Stories - Brief Story</a>
-			</li>			
+				<a href="mockups/personal5.html">Personal Stories - City Menu ToolTip</a>
+			</li>
 			<li>
-				<a href="mockups/personal6.html">Personal Stories - Story Page</a>
-			</li>		
-		</ul>
+				<a href="mockups/personal6.html">Personal Stories - Brief Story</a>
+			</li>
+			<li>
+				<a href="mockups/personal7.html">Personal Stories - Full Story</a>
+			</li>
+			<li>
+				<a href="mockups/map.html">[Interactive Map]</a> (<em>Albany&apos;s Lost Neighborhoods</em>)
+			</li>
+			<li>
+				<a href="mockups/visuals1.html">The Visual Record - Default View</a>
+			</li>
+			<li>
+				<a href="mockups/visuals2.html">The Visual Record - Filters</a>
+			</li>
+			<li>
+				<a href="mockups/visuals3.html">The Visual Record - Filter Selections</a>
+			</li>
+			<li>
+				<a href="mockups/visuals4.html">The Visual Record - Filter Results</a>
+			</li>
+			<li>
+				<a href="mockups/visuals5.html">The Visual Record - Item Detail</a> (<em>South Pearl St. Shopping District</em>)
+			</li>
+			<li>
+				<a href="mockups/timeline1.html">Timeline - Default View</a>
+			</li>
+			<li>
+				<a href="mockups/timeline2.html">Timeline - Event Popup</a>
+			</li>
+			<li>
+				<a href="mockups/themes1.html">[Themes & Essays - Menu]</a>
+			</li>
+			<li>
+				<a href="mockups/themes2.html">[Themes & Essays - Theme Narrative]</a> (<em>Albany&apos;s Rooming Houses &amp; SROs</em>)
+			</li>
+		</ol>
 
 		<h2>Then &amp; Now Prototypes</h2>
 		<ul>
