--- a/mockups/citystory2.html
+++ b/mockups/citystory2.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>The Visual Record - Filters</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="visuals1.html">previous mockup</a> | <a href="visuals3.html">next mockup</a></p>
+		<h1>4 Cities / 4 Stories - City Story Tooltip (<em>Reaction to Redevlopment</em>)</h1>
+		<p><a href="../index.html">return to menu</a> | <a href="citystory1.html">previous mockup</a> | <a href="citystory3.html">next mockup</a></p>
 
-		<img src="images/16-visuals-filters.jpg">
+		<img src="images/03-citystory-citytheme-hover.jpg">
 
 	</div>
 </body>
