--- a/mockups/citystory4.html
+++ b/mockups/citystory4.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>The Visual Record - Filters</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="visuals1.html">previous mockup</a> | <a href="visuals3.html">next mockup</a></p>
+		<h1>4 Cities / 4 Stories - Theme Intro</h1>
+		<p><a href="../index.html">return to menu</a> | <a href="citystory3.html">previous mockup</a> | <a href="sights-sounds.html">next mockup</a></p>
 
-		<img src="images/16-visuals-filters.jpg">
+		<img src="images/05-citystory-theme-intro.jpg">
 
 	</div>
 </body>
