--- a/mockups/home.html
+++ b/mockups/home.html
@@ -12,7 +12,7 @@
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
 		<h1>Home Page</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="overview.html">next mockup</a></p>
+		<p><a href="../index.html">return to menu</a> | <a href="citystory1.html">next mockup</a></p>
 
 		<img src="images/01-home.jpg">
 
