--- a/mockups/map.html
+++ b/mockups/map.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>City/Theme Overview Grid</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="home.html">previous mockup</a> | <a href="visuals1.html">next mockup</a></p>
+		<h1>Interactive Map - Albany&apos;s Lost Neighborhoods</h1>
+		<p><a href="../index.html">return to menu</a> | <a href="personal7.html">previous mockup</a> | <a href="visuals1.html">next mockup</a></p>
 
-		<img src="images/02-overview2.jpg">
+		<img src="">
 
 	</div>
 </body>
