--- a/mockups/personal1.html
+++ b/mockups/personal1.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>Personal Stories - Menu</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="visuals5.html">previous mockup</a> | <a href="personal2.html">next mockup</a></p>
+		<h1>Personal Stories - Topic Menu</h1>
+		<p><a href="../index.html">return to menu</a> | <a href="sights-sounds.html">previous mockup</a> | <a href="personal2.html">next mockup</a></p>
 
-		<img src="images/14-stories-menu.jpg">
+		<img src="images/07-personal-stories-topics.jpg">
 
 	</div>
 </body>
