--- a/mockups/personal2.html
+++ b/mockups/personal2.html
@@ -11,15 +11,15 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>Personal Stories - Story Page</h1>
+		<h1>Personal Stories - Story Page (<em>Hunter&apos;s Pharmacy</em>)</h1>
 		<p>
 			<a href="../index.html">return to menu</a> | 
 			<a href="personal1.html">previous mockup</a> | 
 			<a href="personal3.html">next mockup</a> |
-			<a href="../stories/albany-displaced.html#lillian">Lilian's story in prototype</a>
+			<a href="../stories/albany-displaced.html#lillian">Hunter&apos;s Pharmacy story in prototype</a>
 		</p>
 
-		<img src="images/15-stories-narrative1.jpg">
+		<img src="images/08-personal-stories-hunters.jpg">
 
 	</div>
 </body>
