--- a/mockups/personal7.html
+++ b/mockups/personal7.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>The Visual Record - Filters</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="visuals1.html">previous mockup</a> | <a href="visuals3.html">next mockup</a></p>
+		<h1>Personal Stories - Full Story</h1>
+		<p><a href="../index.html">return to menu</a> | <a href="personal6.html">previous mockup</a> | <a href="map.html">next mockup</a></p>
 
-		<img src="images/16-visuals-filters.jpg">
+		<img src="images/13-personal-stories-long-story.jpg">
 
 	</div>
 </body>
