--- a/mockups/visuals1.html
+++ b/mockups/visuals1.html
@@ -11,11 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>Visual Record - 
-		Default View</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="overview.html">previous mockup</a> | <a href="visuals2.html">next mockup</a></p>
+		<h1>Visual Record - Default View</h1>
+		<p><a href="../index.html">return to menu</a> | <a href="map.html">previous mockup</a> | <a href="visuals2.html">next mockup</a></p>
 
-		<img src="images/09-visuals-default.jpg">
+		<img src="images/15-visuals-default.jpg">
 
 	</div>
 </body>
