--- a/mockups/visuals4.html
+++ b/mockups/visuals4.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>Visual Record - Filtered Results</h1>
+		<h1>The Visual Record - Filter Results</h1>
 		<p><a href="../index.html">return to menu</a> | <a href="visuals3.html">previous mockup</a> | <a href="visuals5.html">next mockup</a></p>
 
-		<img src="images/12-visuals-selects.jpg">
+		<img src="images/18-visuals-filter-results.jpg">
 
 	</div>
 </body>
