--- a/mockups/visuals5.html
+++ b/mockups/visuals5.html
@@ -11,10 +11,10 @@
 <body class="stackedit">
 	<div class="stackedit__html">
 		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>Visual Record - Item Detail</h1>
-		<p><a href="../index.html">return to menu</a> | <a href="visuals4.html">previous mockup</a> | <a href="personal1.html">next mockup</a></p>
+		<h1>The Visual Record - Item Detail</h1>
+		<p><a href="../index.html">return to menu</a> | <a href="visuals4.html">previous mockup</a> | <a href="timeline1.html">next mockup</a></p>
 
-		<img src="images/13-visuals-item.jpg">
+		<img src="images/19-visuals-item.jpg">
 
 	</div>
 </body>
