links from scroll story

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -29,12 +29,12 @@
 <body>
 	<nav class="main-menu">
 		<ul>
-			<li><a href="#">urban renewal home</a></li>
-			<li class="selected"><a href="#">overview</a></li>
-			<li><a href="#">the visual record</a></li>
-			<li><a href="#">personal stories</a></li>
+			<li><a href="../mockups/home.html">home</a></li>
+			<li class="selected"><a href="../mockups/citystory1.html">4 cities / 4 stories</a></li>
+			<li><a href="#">sights &amp; sounds</a></li>
 			<li class="last-menu-item"><a href="#">maps</a></li>
-		</ul>
+			<li><a href="../mockups/personal1.html">personal stories</a></li>
+		</ul>		
 	</nav>
 
 	<section>
