big svg improvements

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -32,8 +32,8 @@
 			<li><a href="../mockups/home.html">home</a></li>
 			<li class="selected"><a href="../mockups/citystory1.html">4 cities / 4 stories</a></li>
 			<li><a href="#">sights &amp; sounds</a></li>
-			<li class="last-menu-item"><a href="#">maps</a></li>
-			<li><a href="../mockups/personal1.html">personal stories</a></li>
+			<li><a href="#">maps</a></li>
+			<li class="last-menu-item"><a href="../mockups/personal1.html">personal stories</a></li>
 		</ul>		
 	</nav>
 
