menu thumbs, start vue mockups

--- a/index-thumb.html
+++ b/index-thumb.html
@@ -76,16 +76,16 @@
     <rect id="sights-sounds-menu" x="135" y="487.9" fill="#AECE7C" width="96" height="96"/>
   </a>
   <a xlink:href="mockups/citystory4.html" >
-    <rect id="theme-intro" y="613.9" fill="#B4B0CC" width="96" height="96"/>
+    <image id="theme-intro" y="613.9" width="96" height="96" xlink:href="mockups/menupics/05-citystory-theme-intro.jpg"></image>
   </a>
   <a xlink:href="mockups/citystory3.html" >
-    <rect id="city-intro" y="487.9" fill="#B4B0CC" width="96" height="96"/>
+    <image id="city-intro" y="487.9" width="96" height="96" xlink:href="mockups/menupics/04-citystory-city-intro.jpg"></image>
   </a>
   <a xlink:href="mockups/citystory2.html" >
-    <rect id="city-story-tooltip" y="361.9" fill="#B4B0CC" width="96" height="96"/>
+    <image id="city-story-tooltip" y="361.9" width="96" height="96" xlink:href="mockups/menupics/03-citystory-city_theme-hover.jpg"></image>
   </a>
   <a xlink:href="mockups/citystory1.html" >
-    <rect id="city-story-menu" y="234.9" fill="#B4B0CC" width="96" height="96"/>
+    <image y="234.9" width="96" height="96" xlink:href="mockups/menupics/02-citystory-default.jpg"></image>
   </a>
   <a xlink:href="mockups/home.html" >
     <rect id="home" y="48.9" fill="#F9F1A5" width="96" height="96"/>
@@ -195,7 +195,9 @@
     <text transform="matrix(1 0 0 1 479.79 29.3481)" font-family="'FontinSans-Bold'" font-size="18px">City/Theme Scroll Story</text>
   </g>
   <text transform="matrix(1 0 0 1 898.1382 870.1675)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">South Pearl St.</tspan><tspan x="-8.4" y="14" font-family="'FontinSans-Italic'" font-size="12px">Shopping District </tspan></text>
-  <text transform="matrix(1 0 0 1 19.6782 395.2983)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Reaction to</tspan><tspan x="-9.5" y="14" font-family="'FontinSans-Italic'" font-size="12px">Redevelopment</tspan></text>
+
+  <text transform="matrix(1 0 0 1 100 380)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Reaction to Redevelopment</tspan></text>
+
   <text transform="matrix(1 0 0 1 295.6422 781.5813)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Hunter’s</tspan><tspan x="-1.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Pharmacy</tspan></text>
   <text transform="matrix(1 0 0 1 752.0264 371.9218)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany’s Lost</tspan><tspan x="-5.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Neighborhoods</tspan></text>
   <rect x="872.9" y="1313.9" fill="none" width="120" height="50"/>
